Can create/edit circles

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "barryvdh/laravel-debugbar": "^3.1",
         "fideloper/proxy": "~4.0",
         "guzzlehttp/guzzle": "^6.3",
+        "knowfox/crud": "dev-master",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "~1.0",
         "mpociot/versionable": "^2.1"
