--- a/skill/storylab/.ask/config
+++ b/skill/storylab/.ask/config
@@ -1,14 +1,14 @@
 {
   "deploy_settings": {
     "default": {
-      "skill_id": "",
+      "skill_id": "amzn1.ask.skill.ef67b0de-978f-4f4a-b676-899da832e51a",
       "was_cloned": false,
       "merge": {
         "manifest": {
           "apis": {
             "custom": {
               "endpoint": {
-                "uri": "ask-custom-storylab-default"
+                "uri": "arn:aws:lambda:eu-west-1:208834871768:function:storylab"
               }
             }
           }
