--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/framework": "5.6.*",
         "laravel/passport": "^5.0",
         "laravel/tinker": "~1.0",
-        "mpociot/versionable": "^2.1"
+        "mpociot/versionable": "^2.1",
+        "symfony/yaml": "^4.0"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
