--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "fideloper/proxy": "~4.0",
         "guzzlehttp/guzzle": "^6.3",
         "knowfox/crud": "dev-master",
-        "knowfox/passwordless": "^0.4.0",
+        "knowfox/passwordless": "dev-master",
         "laravel/framework": "5.6.*",
         "laravel/passport": "^5.0",
         "laravel/tinker": "~1.0",
