--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": ">=7.1.3",
         "barryvdh/laravel-debugbar": "^3.1",
+        "doctrine/dbal": "^2.6",
         "fideloper/proxy": "~4.0",
         "guzzlehttp/guzzle": "^6.3",
         "knowfox/crud": "dev-master",
