--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/passport": "^5.0",
         "laravel/tinker": "~1.0",
         "mpociot/versionable": "^2.1",
+        "spatie/laravel-medialibrary": "^7.1",
         "symfony/yaml": "^4.0"
     },
     "require-dev": {
