--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "doctrine/dbal": "^2.6",
         "fideloper/proxy": "~4.0",
         "guzzlehttp/guzzle": "^6.3",
+        "hkod/frontmatter": "^1.1",
         "knowfox/crud": "dev-master",
         "knowfox/passwordless": "dev-master",
         "laravel/framework": "5.6.*",
