--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
         "cross-env": "^5.1",
         "dropzone": "^5.4.0",
         "jquery": "^3.2",
-        "laravel-mix": "^2.0",
+        "laravel-mix": "^4.0.16",
         "lodash": "^4.17.4",
         "popper.js": "^1.12",
-        "vue": "^2.5.7"
+        "resolve-url-loader": "2.3.1",
+        "sass": "^1.21.0",
+        "sass-loader": "7.*",
+        "vue": "^2.5.7",
+        "vue-template-compiler": "^2.6.10"
     }
 }
